--- a/packages/table/src/core.css
+++ b/packages/table/src/core.css
@@ -8,6 +8,7 @@
         1px solid rgba(0, 0, 0, 0.1)
     );
     --table-row-background: var(--bx-table-row-background, #fff);
+    --table-field-padding: 10px;
 
     width: 100%;
     background: var(--table-background);
